# anmari

./: ACTION_QUEUE.md  Cargo.toml  IMAP.md  MICROSOFT365.md  O365_IMPLEMENTATION.md  README.md  action_queue.py  anmari.py  cache.py  config.py  graph_client.py  imap_client.py  o365_auth.py  o365_setup.py  repl.py  requirements.txt  search.py  sync_manager.py  utils.py
examples/: basic.rs
imap_outlook_proxy/: README.md  auth_credential.py  imap_graph_proxy.py
imap_outlook_proxy/mocks/: devproxyrc.json  generate_mock_auth_code.py
patches/: io-imap+0.0.1.patch
src/: cache.rs  config.rs  display.rs  imap.rs  lib.rs  main.rs  repl.rs  schema.rs  search.rs  sync.rs  tantivy_search.rs
