[package]
name = "anmari"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anmari"
path = "src/main.rs"

[dependencies]
email-lib = "0.26"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
dirs = "6.0"
toml = "0.8"
