[package]
name = "anmari"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
io-imap = { path = "../pimalaya/io-imap" }
io-stream = { version = "0.0.2", default-features = false, features = ["std"] }
rustls = "0.23"
rustls-platform-verifier = "0.6"
secrecy = "0.10"
log = "0.4.29"
env_logger = "0.11.9"
