[package]
name = "anmari"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
dirs = "5.0"
# io-imap = { git = "https://github.com/pimalaya/io-imap.git", branch = "io", default-features = false }
io-imap = { path = "../pimalaya/io-imap" }
imap-codec = { version = "2.0.0-alpha.7", features = ["ext_condstore_qresync"] }
io-stream = { version = "0.0.2", default-features = false, features = ["std"] }
rustls = "0.23"
rustls-platform-verifier = "0.6"
secrecy = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4.29"
env_logger = "0.11.9"
rfc2047-decoder = "1.1.0"
fast-rich = "0.3"
shell-words = "1.1"
chrono = "0.4"
chrono-english = "0.1"
rustyline = "14"
tantivy = "0.22"

# [package.metadata.patch]
# crates = ["io-imap"]
# 
# [patch.'https://github.com.pimalaya/io-imap.git']
# io-imap = { path = "../pimalaya/io-imap" }
